kubernetes/apps/wardrowbe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wardrowbe-backend
  namespace: wardrowbe
spec:
  selector:
    app: wardrowbe-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: wardrowbe-frontend
  namespace: wardrowbe
spec:
  selector:
    app: wardrowbe-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
